try fix inputs on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -286,7 +286,7 @@ textarea {
 }
 
 .registration-button-substitute h4 {
-    color: var(--light-grey);
+    color: var(--dark-grey);
   }
 
 .section-title {
@@ -297,6 +297,7 @@ textarea {
 
 .section-title h3 {
   margin-bottom: 0;
+  font-size: 30px;
 }
 
 .section-title span {
@@ -675,13 +676,9 @@ textarea {
   .registration-button-substitute {
     align-self: center;
     margin-top: 20px;
-    width: 100%;
+    width: 50%;
     padding: 10px;
-    background-color: #13E3AB;
   }
 
-  .registration-button-substitute h4 {
-    color: white;
-  }
 
 }
